--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,7 +9,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicons/logo192.png" />
+    <link
+      rel="apple-touch-icon"
+      href="%PUBLIC_URL%/favicons/apple-touch-icon.png"
+    />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link
