--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,10 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicons/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="Warriors Online" content="Warriors Online HUB" />
     <link
       rel="apple-touch-icon"
       href="%PUBLIC_URL%/favicons/apple-touch-icon.png"
@@ -27,7 +24,7 @@
       href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <title>WCA - Online</title>
+    <title>Warriors Online</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
